--- a/css/style.css
+++ b/css/style.css
@@ -94,25 +94,27 @@ body{
 
 #main_display{
     border: 1px solid red;
-    width: calc(67vw * var(--porcentaje)); 
+    width: calc(62vw * var(--porcentaje)); 
     height: calc(25vw * var(--porcentaje));
     position: absolute;
     top: calc(31vw * var(--porcentaje));
-    left: calc(16vw * var(--porcentaje));
+    left: calc(19vw * var(--porcentaje));
     text-align: right;
+    padding: calc(1vw * var(--porcentaje));
     line-height: calc(38vw * var(--porcentaje));
     font-size: calc(15vw * var(--porcentaje));
 }
 #aux_display{
-    border: 1px solid red;
     font-size: calc(7vw * var(--porcentaje));
-    width: calc(67vw * var(--porcentaje));
+    width: calc(65vw * var(--porcentaje));
     height: calc(15vw * var(--porcentaje));
     position: absolute;
     top: calc(30vw * var(--porcentaje));
     left: calc(16vw * var(--porcentaje));
     text-align: right;
+    padding: calc(1vw * var(--porcentaje));
     line-height: calc(15vw * var(--porcentaje));
+    overflow: hidden;
 }
 
 #error{
@@ -122,5 +124,4 @@ body{
     text-align: center;
     line-height: calc(10vw * var(--porcentaje));
     font-size: calc(10vw * var(--porcentaje));
-    border: 1px solid green;
 } 
